# freecad-mcp

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.ci  Dockerfile.mutation-authority  README.md  _commit_msg.txt  docker-compose.yml  install.ps1  pyproject.toml
.github/workflows/: ci.yml
addon/FreeCADMCP/: Init.py  InitGui.py  document_lock.py  document_state.py  git_sidecar.py  lock_indicator.py
ci/: preflight_imports.py  run_freecad_tests.py
doc/: document-lease-sidecar-v2.md  document-leases.md  freecad_rpc_worker_architecture_plan.md  gui-geometry-loop-guard.md  isolated-instance.md  lease-recovery.md  lease-security.md  mcp-feedback-status.md
scripts/: run_freecad_mcp.py  run_mutation_authority_coupling_tests.py  setup_cursor_mcp.py  setup_cursor_mcp_isolated.py  setup_isolated_profile.py  start_freecad_isolated.py
src/freecad_mcp/: assembly_api_bootstrap.py  asset_creation_strategy.txt  debug_log.py  execute_options.py  ffmpeg_util.py  freecad_client.py  lease_manager.py  process_tree.py  prompt_text.py  responses.py  rpc_auth.py  server.py  server_state.py  template_resources.py
tests/: conftest.py  test_addon_settings.py  test_core_authority.py  test_diagnostics.py  test_document_lease_v2_model.py  test_document_lease_v2_observer.py  test_document_lease_v2_service.py  test_document_lease_v2_sidecar.py  test_document_lock.py  test_document_state.py  test_execute_code_camera.py  test_execution_banner.py  test_execution_safety.py  test_git_sidecar.py  test_gui_dispatcher.py  test_gui_mutation_attribution.py  test_isolated_interactive.py  test_isolated_scripts.py  test_lease_manager.py  test_lease_preserving_restore.py  test_lease_protocol.py  test_lease_public_api.py  test_lock_indicator.py  test_mcp_extended.py  test_mcp_rpc_v2_lifecycle.py  test_mdi_live_redraw_guards.py  test_operation_scope.py  test_p1_sketch_curves.py  test_p2_sketch_editing.py  test_p3_features.py  test_p4_gears.py  test_p5_measure.py  test_p6_io.py  test_p7_assembly.py  test_p8_path.py  test_parametric.py  test_process_tree.py  test_reference_repair_tools.py  test_rpc_auth.py  test_rpc_concurrency.py  (+15 more)
tests/e2e/: _helpers.py  test_document_lock.py  test_i1_preview_attachment.py  test_i4_find_subshapes.py  test_i5_delete_object.py  test_i6_cross_body_preflight.py  test_i7_snapshot_restore.py  test_i9_solve_assembly.py  test_interactive_diagnostics.py  test_mx_helpers.py  test_p10_screenshot_image.py  test_p11_constraint_signatures.py  test_p12_snapshot_restore.py  test_p1_cross_body_datum_placement.py  test_p2_pad_yz_direction.py  test_p3_deactivated_rotation.py  test_p4_shape_absorption.py  test_p5_joint_breaks_datum.py  test_p6_remove_body_orphans.py  test_p7_datum_origin_face_center.py  test_p8_part_circle_direction_attr.py  test_p9_solve_assembly_api.py  test_parametric_sketch.py  test_reference_repair.py  test_rpc_lifecycle.py  test_worker_process.py
tests/fixtures/: sweep45_1_payload.py.txt
tests/helpers/: curves.py  geometric.py  response.py  runtime_bootstrap.py
tests/integration/: test_assembly_path_live.py  test_eight_gears.py
(+177 files in other folders)
