[project]
name = "freecad-mcp"
version = "0.1.17"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "neka-nat", email = "nekanat.stock@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.12.2",
    "validators>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "hatchling",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "pytest-cov>=5.0",
]

[project.scripts]
freecad-mcp = "freecad_mcp.server:main"

[tool.hatch.build.targets.sdist]
exclude = ["assets", "results"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
# Put the package root on sys.path so `from tests.helpers...` resolves during
# collection. Without this, pytest's prepend import mode inserts only the test
# file's dir (tests/), not the package root, so `import tests` fails -- and
# since pytest imports every module during collection (regardless of -m), that
# aborts the whole run even for `-m unit`. `tests` has no __init__.py, so it is
# imported as a namespace package from the root added here.
pythonpath = ["."]
markers = [
    "unit: mock-based tests that do not require a FreeCAD install (fast, run anywhere)",
    "e2e: live tests that drive a real headless FreeCAD (FreeCADCmd) inside Docker",
    "core: tests reproducing FreeCAD core C++ behavior (placement/attacher/sketcher/pad)",
]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
